fix static folder issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
     <meta property="og:image:alt" content="{{ name }} Profile Image" />
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="static/css/modern_normalize.css" />
-    <link rel="stylesheet" href="static/css/html5bp.css" />
-    <link rel="stylesheet" href="static/css/main.css" />
+    <link rel="stylesheet" href="css/modern_normalize.css" />
+    <link rel="stylesheet" href="css/html5bp.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
     <!-- Theme -->
     <meta name="theme-color" content="#fafafa" />
