add navigation to main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,12 @@
       </div>
     </header>
 
+    <div id="mySidenav" class="sidenav">
+        <a href="index.html" id="about">About</a>
+        <a href="posts" id="blog">Blog</a>
+        <a href="resume.pdf" id="resume">Resume</a>
+        <a href="https://example.com" id="contact">Contact</a>
+      </div>
     <!-- Resume body -->
     <div class="page-content">
       <div class="container">
