separate navigation css

--- a/templates/post.html
+++ b/templates/post.html
@@ -15,6 +15,7 @@ $endif$
 
         <!-- <link rel="stylesheet" href="style.css"> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/diversen/pandoc-uikit@master/style.css">
+        <link rel="stylesheet" href="../css/sidenav.css" />
         <link href="https://vjs.zencdn.net/5.4.4/video-js.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
         <!-- <script src="uikit.js"></script> -->
@@ -53,7 +54,12 @@ $endif$
     </head>
 
     <body>
-
+        <div id="mySidenav" class="sidenav">
+            <a href="../index.html" id="home">Home</a>
+            <a href="posts" id="blog">Blog</a>
+            <a href="../resume.pdf" id="resume">Resume</a>
+            <a href="https://example.com" id="contact">Contact</a>
+        </div>
 
         <div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
 
