--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/modern_normalize.css" />
     <link rel="stylesheet" href="css/html5bp.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/sidenav.css" />
 
     <!-- Theme -->
     <meta name="theme-color" content="#fafafa" />
@@ -86,11 +87,11 @@
     </header>
 
     <div id="mySidenav" class="sidenav">
-        <a href="index.html" id="about">About</a>
-        <a href="posts" id="blog">Blog</a>
-        <a href="resume.pdf" id="resume">Resume</a>
-        <a href="https://example.com" id="contact">Contact</a>
-      </div>
+      <a href="index.html" id="home">Home</a>
+      <a href="posts" id="blog">Blog</a>
+      <a href="resume.pdf" id="resume">Resume</a>
+      <a href="https://example.com" id="contact">Contact</a>
+    </div>
     <!-- Resume body -->
     <div class="page-content">
       <div class="container">
