--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
 
     <!-- Icons -->
     <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon.png" />
-    <link rel="icon" sizes="32x32" href="img/favicon-32x32.png" />
-    <link rel="icon" sizes="16x16" href="img/favicon-16x16.png" />
+    <link rel="icon" size="32x32" href="img/favicon-32x32.png" />
+    <link rel="icon" size="16x16" href="img/favicon-16x16.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- Stylesheet -->
