--- a/templates/post.html
+++ b/templates/post.html
@@ -20,8 +20,8 @@
       rel="apple-touch-icon-precomposed"
       href="../img/apple-touch-icon.png"
     />
-    <link rel="icon" sizes="32x32" href="../img/favicon-32x32.png" />
-    <link rel="icon" sizes="16x16" href="../img/favicon-16x16.png" />
+    <link rel="icon" size="32x32" href="../img/favicon-32x32.png" />
+    <link rel="icon" size="16x16" href="../img/favicon-16x16.png" />
 
     <script
       id="MathJax-script"
@@ -33,7 +33,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/diversen/pandoc-uikit@master/style.css"
     />
-    <link rel="stylesheet" href="../css/sidenav.css" />
     <link rel="stylesheet" href="../css/posts.css" />
     <link href="https://vjs.zencdn.net/5.4.4/video-js.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
