replace contacts tab with pets

--- a/templates/pets.html
+++ b/templates/pets.html
@@ -116,10 +116,10 @@
     </div>
 
     <div id="mySidenav" class="sidenav">
-      <a href="https://example.com" id="contact">Contact</a>
       <a href="/index.html" id="home">Home</a>
       <a href="/posts/index.html" id="blog">Blog</a>
       <a href="/resume.pdf" id="resume">Resume</a>
+      <a href="https://example.com" id="pets">Pets</a>
     </div>
 
     <footer class="page-footer">
