--- a/templates/post.html
+++ b/templates/post.html
@@ -122,7 +122,7 @@
       <a href="../index.html" id="home">Home</a>
       <a href="../posts" id="blog">Blog</a>
       <a href="../resume.pdf" id="resume">Resume</a>
-      <a href="https://example.com" id="contact">Contact</a>
+      <a href="https://example.com" id="pets">Pets</a>
     </div>
 
     <footer class="page-footer">
