--- a/templates/post.html
+++ b/templates/post.html
@@ -15,13 +15,10 @@
     $endif$
 
     <!-- Icons -->
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-    <link
-      rel="apple-touch-icon-precomposed"
-      href="../img/apple-touch-icon.png"
-    />
-    <link rel="icon" size="32x32" href="../img/favicon-32x32.png" />
-    <link rel="icon" size="16x16" href="../img/favicon-16x16.png" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon.png" />
+    <link rel="icon" size="32x32" href="/img/favicon-32x32.png" />
+    <link rel="icon" size="16x16" href="/img/favicon-16x16.png" />
 
     <script
       id="MathJax-script"
@@ -33,7 +30,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/diversen/pandoc-uikit@master/style.css"
     />
-    <link rel="stylesheet" href="../css/posts.css" />
+    <link rel="stylesheet" href="/css/posts.css" />
     <link href="https://vjs.zencdn.net/5.4.4/video-js.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <!-- <script src="uikit.js"></script> -->
@@ -85,8 +82,7 @@
           <br />
           $if(date)$
           <h2 class="header-label">$date$</h2>
-          $endif$
-          $if(summary)$
+          $endif$ $if(summary)$
           <p class="header-summary">$summary$</p>
           $endif$
         </div>
@@ -119,9 +115,9 @@
     </div>
 
     <div id="mySidenav">
-      <a href="../index.html" id="home">Home</a>
-      <a href="../posts" id="blog">Blog</a>
-      <a href="../resume.pdf" id="resume">Resume</a>
+      <a href="/index.html" id="home">Home</a>
+      <a href="/posts/index.html" id="blog">Blog</a>
+      <a href="/resume.pdf" id="resume">Resume</a>
       <a href="https://example.com" id="pets">Pets</a>
     </div>
 
