--- a/templates/index.html
+++ b/templates/index.html
@@ -277,25 +277,11 @@
       <a href="/index.html" id="home">Home</a>
       <a href="/posts/index.html" id="blog">Blog</a>
       <a href="/resume.pdf" id="resume">Resume</a>
-      <a href="https://example.com" id="pets">Pets</a>
+      <a href="/pets.html" id="pets">Pets</a>
     </div>
 
     <footer class="page-footer">
-      <div class="container">
-        This work is marked
-        <a href="https://creativecommons.org/publicdomain/zero/1.0/"
-          >CC0 1.0 Universal</a
-        ><img
-          src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"
-          alt=""
-          style="max-width: 1em; max-height: 1em; margin-left: 0.2em"
-        /><img
-          src="https://mirrors.creativecommons.org/presskit/icons/zero.svg"
-          alt=""
-          style="max-width: 1em; max-height: 1em; margin-left: 0.2em"
-        />
-        <!-- <p>© {{ current_year }} {{ name }}. All rights reserved.</p> -->
-      </div>
+      <p>© {{ current_year }} {{ name }}. All rights reserved.</p>
     </footer>
   </body>
 </html>
