--- a/templates/pets.html
+++ b/templates/pets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Website description -->
-    <title>{{ website_title }}</title>
+    <title>{{ website_title }} - Pets</title>
     <meta name="description" content="{{ name }} - {{ summary }}" />
     <meta name="author" content="{{ name }}" />
 
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/css/html5bp.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/sidenav.css" />
+    <link rel="stylesheet" href="/css/pets.css" />
 
     <!-- Theme -->
     <meta name="theme-color" content="#fafafa" />
@@ -98,20 +99,12 @@
 
     <div class="container">
       <main>
-        <section>
-          {% for post in posts %} {% set currentyear = strftime(post.date, "%Y")
-          %} {% if currentyear != prevyear %}
-          <h2 class="section-heading">{{ currentyear }}</h2>
-          {% set prevyear = currentyear %} {% endif %}
-          <ul>
-            <li>
-              <a href="{{ post.file_path }}"
-                >{{ strftime(post.date, "%B %-d") }} - {{ post.title }}</a
-              >
-            </li>
-          </ul>
+        <h3 class="header-info">{{ pet_descr }}</h3><br/>
+        <div class="gallery">
+          {% for img in pet_images %}
+          <div class="gallery-item"><img src="{{ img.img_path }}" /></div>
           {% endfor %}
-        </section>
+        </div>
       </main>
     </div>
 
@@ -119,24 +112,11 @@
       <a href="/index.html" id="home">Home</a>
       <a href="/posts/index.html" id="blog">Blog</a>
       <a href="/resume.pdf" id="resume">Resume</a>
-      <a href="https://example.com" id="pets">Pets</a>
+      <a href="/pets.html" id="pets">Pets</a>
     </div>
 
     <footer class="page-footer">
-      <div class="container">
-        This work is marked
-        <a href="https://creativecommons.org/publicdomain/zero/1.0/"
-          >CC0 1.0 Universal</a
-        ><img
-          src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"
-          alt=""
-          style="max-width: 1em; max-height: 1em; margin-left: 0.2em"
-        /><img
-          src="https://mirrors.creativecommons.org/presskit/icons/zero.svg"
-          alt=""
-          style="max-width: 1em; max-height: 1em; margin-left: 0.2em"
-        />
-        <!-- <p>© {{ current_year }} {{ name }}. All rights reserved.</p> -->
+       <p>© {{ current_year }} {{ name }}. All rights reserved.</p>
       </div>
     </footer>
   </body>
