--- a/templates/post_index.html
+++ b/templates/post_index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Website description -->
-    <title>{{ website_title }}</title>
+    <title>{{ website_title }} - Posts</title>
     <meta name="description" content="{{ name }} - {{ summary }}" />
     <meta name="author" content="{{ name }}" />
 
@@ -119,7 +119,7 @@
       <a href="/index.html" id="home">Home</a>
       <a href="/posts/index.html" id="blog">Blog</a>
       <a href="/resume.pdf" id="resume">Resume</a>
-      <a href="https://example.com" id="pets">Pets</a>
+      <a href="/pets.html" id="pets">Pets</a>
     </div>
 
     <footer class="page-footer">
