--- a/templates/post.html
+++ b/templates/post.html
@@ -122,7 +122,19 @@
     </div>
 
     <footer class="page-footer">
-      <p>© {{ current_year }} {{ name }}. All rights reserved.</p>
+      <div class="container">
+        This work is marked
+        <a href="https://creativecommons.org/publicdomain/zero/1.0/"
+          >CC0 1.0 Universal</a
+        ><img
+          src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"
+          alt=""
+          style="max-width: 1em; max-height: 1em; margin-left: 0.2em"
+        /><img
+          src="https://mirrors.creativecommons.org/presskit/icons/zero.svg"
+          alt=""
+          style="max-width: 1em; max-height: 1em; margin-left: 0.2em"
+        />
     </footer>
   </body>
 </html>
