no need to use current_year since 'now' is passed into template

--- a/templates/pets.html
+++ b/templates/pets.html
@@ -116,7 +116,7 @@
     </div>
 
     <footer class="page-footer">
-       <p>© {{ current_year }} {{ name }}. All rights reserved.</p>
+       <p>© {{ now.year }} {{ name }}. All rights reserved.</p>
       </div>
     </footer>
   </body>
