--- a/templates/index.html
+++ b/templates/index.html
@@ -281,7 +281,7 @@
     </div>
 
     <footer class="page-footer">
-      <p>© {{ current_year }} {{ name }}. All rights reserved.</p>
+      <p>© {{ now.year }} {{ name }}. All rights reserved.</p>
     </footer>
   </body>
 </html>
